// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calls Notifier close menu by Escape 1`] = `
<div>
  <div
    className="component"
    onClick={[Function]}
  >
    <div
      className="user"
    >
      <div
        className="name"
      >
        Егор
      </div>
      <div
        className="second_name"
      >
        Куц
      </div>
    </div>
    <icon-mock
      className="icon"
    />
    <div
      className="ring answered"
    />
  </div>
  <div
    className="menu"
    onKeyUp={[Function]}
    tabIndex={1}
  >
    <Memo()
      className="close"
      onClick={[Function]}
    />
    <Link
      href="http://localhost/#/clients/64e0f242-c10b-4217-8220-9f1676139691/info"
    >
      <h3>
        Куц Егор (админка)
      </h3>
    </Link>
    <div
      className="tag"
      title="Тег очереди звонков https://st.yandex-team.ru/DRIVESUP-5111"
    >
      Звонок из Москвы
    </div>
    <Button
      className="classification_btn"
      colorType="warning"
      onClick={[Function]}
    >
      Классификация
    </Button>
    <Button
      basic={true}
      className="button"
      colorType="warning"
      onClick={[Function]}
    >
      Привязать пользователя
    </Button>
    <LastPerformers
      user_id="64e0f242-c10b-4217-8220-9f1676139691"
    />
  </div>
</div>
`;

exports[`Calls Notifier close menu by Escape 2`] = `
<div>
  <div
    className="component"
    onClick={[Function]}
  >
    <div
      className="user"
    >
      <div
        className="name"
      >
        Егор
      </div>
      <div
        className="second_name"
      >
        Куц
      </div>
    </div>
    <icon-mock
      className="icon"
    />
    <div
      className="ring answered"
    />
  </div>
</div>
`;

exports[`Calls Notifier empty call 1`] = `""`;

exports[`Calls Notifier menu open /close (by close btn) 1`] = `
<div>
  <div
    className="component"
    onClick={[Function]}
  >
    <div
      className="user"
    >
      <div
        className="name"
      >
        Егор
      </div>
      <div
        className="second_name"
      >
        Куц
      </div>
    </div>
    <icon-mock
      className="icon"
    />
    <div
      className="ring answered"
    />
  </div>
  <div
    className="menu"
    onKeyUp={[Function]}
    tabIndex={1}
  >
    <Memo()
      className="close"
      onClick={[Function]}
    />
    <Link
      href="http://localhost/#/clients/64e0f242-c10b-4217-8220-9f1676139691/info"
    >
      <h3>
        Куц Егор (админка)
      </h3>
    </Link>
    <div
      className="tag"
      title="Тег очереди звонков https://st.yandex-team.ru/DRIVESUP-5111"
    >
      Звонок из Москвы
    </div>
    <Button
      className="classification_btn"
      colorType="warning"
      onClick={[Function]}
    >
      Классификация
    </Button>
    <Button
      basic={true}
      className="button"
      colorType="warning"
      onClick={[Function]}
    >
      Привязать пользователя
    </Button>
    <LastPerformers
      user_id="64e0f242-c10b-4217-8220-9f1676139691"
    />
  </div>
</div>
`;

exports[`Calls Notifier menu open /close (by close btn) 2`] = `
<div>
  <div
    className="component"
    onClick={[Function]}
  >
    <div
      className="user"
    >
      <div
        className="name"
      >
        Егор
      </div>
      <div
        className="second_name"
      >
        Куц
      </div>
    </div>
    <icon-mock
      className="icon"
    />
    <div
      className="ring answered"
    />
  </div>
</div>
`;

exports[`Calls Notifier menu open /close (client) 1`] = `
<div>
  <div
    className="component"
    onClick={[Function]}
  >
    <div
      className="user"
    >
      <div
        className="name"
      >
        Егор
      </div>
      <div
        className="second_name"
      >
        Куц
      </div>
    </div>
    <icon-mock
      className="icon"
    />
    <div
      className="ring answered"
    />
  </div>
  <div
    className="menu"
    onKeyUp={[Function]}
    tabIndex={1}
  >
    <Memo()
      className="close"
      onClick={[Function]}
    />
    <Link
      href="http://localhost/#/clients/64e0f242-c10b-4217-8220-9f1676139691/info"
    >
      <h3>
        Куц Егор (админка)
      </h3>
    </Link>
    <div
      className="tag"
      title="Тег очереди звонков https://st.yandex-team.ru/DRIVESUP-5111"
    >
      Звонок из Москвы
    </div>
    <Button
      className="classification_btn"
      colorType="warning"
      onClick={[Function]}
    >
      Классификация
    </Button>
    <Button
      basic={true}
      className="button"
      colorType="warning"
      onClick={[Function]}
    >
      Привязать пользователя
    </Button>
    <LastPerformers
      user_id="64e0f242-c10b-4217-8220-9f1676139691"
    />
  </div>
</div>
`;

exports[`Calls Notifier menu open /close (client) 2`] = `
<div>
  <div
    className="component"
    onClick={[Function]}
  >
    <div
      className="user"
    >
      <div
        className="name"
      >
        Егор
      </div>
      <div
        className="second_name"
      >
        Куц
      </div>
    </div>
    <icon-mock
      className="icon"
    />
    <div
      className="ring answered"
    />
  </div>
</div>
`;

exports[`Calls Notifier new call 1`] = `
<div>
  <div
    className="component"
    onClick={[Function]}
  >
    <div
      className="user"
    >
      <div
        className="name"
      >
        Егор
      </div>
      <div
        className="second_name"
      >
        Куц
      </div>
    </div>
    <icon-mock
      className="icon"
    />
    <div
      className="ring "
    />
  </div>
</div>
`;

exports[`LastPerformers LastPerformerItem common with categorization 1`] = `
<div
  className="history_item"
  key="0"
>
  <div>
    <span
      className="status "
    />
     
    <FormatDate
      value={1601293068000}
    />
    <span>
       (
      <strong>
        2.1 мин.
      </strong>
      )
    </span>
    <span>
       
      <i>
        <Link
          href="#/clients/c3e64a2c-cddd-4390-a79c-bbe17456acd4/info"
          target="_blank"
        >
          andreevich
        </Link>
      </i>
    </span>
  </div>
  <div
    className="history_item_categorization"
  >
    Интерфейс / дизайн
  </div>
</div>
`;

exports[`LastPerformers LastPerformerItem common without categorization 1`] = `
<div
  className="history_item"
  key="0"
>
  <div>
    <span
      className="status "
    />
     
    <FormatDate
      value={1601293068000}
    />
    <span>
       (
      <strong>
        2.1 мин.
      </strong>
      )
    </span>
    <span>
       
      <i>
        <Link
          href="#/clients/c3e64a2c-cddd-4390-a79c-bbe17456acd4/info"
          target="_blank"
        >
          andreevich
        </Link>
      </i>
    </span>
  </div>
  <div
    className="history_item_categorization"
  />
</div>
`;

exports[`LastPerformers LastPerformerItem duty 1`] = `
<div
  className="history_item"
  key="0"
>
  <div>
    <span
      className="status duty"
    />
     
    <FormatDate
      value={1601293068000}
    />
    <span>
       (
      <strong>
        2.1 мин.
      </strong>
      )
    </span>
    <span>
       
      <i>
        <Link
          href="#/clients/c3e64a2c-cddd-4390-a79c-bbe17456acd4/info"
          target="_blank"
        >
          andreevich
        </Link>
      </i>
    </span>
  </div>
  <div
    className="history_item_categorization"
  >
    Интерфейс / дизайн
  </div>
</div>
`;

exports[`LastPerformers LastPerformerItem is empty 1`] = `
<div
  className="history_item"
  key="0"
>
  <div>
    <span
      className="status "
    />
     
    <FormatDate
      value={NaN}
    />
    <span>
       (
      <strong>
        0.0 cек.
      </strong>
      )
    </span>
    <span>
       
      <i>
        <Link
          href="#/clients/undefined/info"
          target="_blank"
        />
      </i>
    </span>
  </div>
  <div
    className="history_item_categorization"
  />
</div>
`;
